# sieve-generator

./: .gitignore  Cargo.toml  LICENSE  README.md
examples/: filter.sieve  sieve.config.json
src/: common.rs  main.rs  types.rs
src/generators/: filter_generator.rs  mod.rs
